// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown basic dropdown isShow 1`] = `
<div class="relative">
  <div class="absolute z-50 top-full min-w-full mt-0-4 bg-white overflow-hidden shadow-secondary rounded left-0"></div>
</div>
`;

exports[`Dropdown basic placement 1`] = `
<div class="relative">
  <div class="absolute z-50 top-full min-w-full mt-0-4 bg-white overflow-hidden shadow-secondary rounded right-0"></div>
</div>
`;

exports[`Dropdown slots holder 1`] = `
<div class="relative">
  <div>Click me</div>
</div>
`;
